@@ -24,7 +24,6 @@
  */
 
 #include "edit.h"
-#include "termios.h"
 #include <qlayout.h>
 #include <kquickhelp.h>
 #include <qregexp.h>
@@ -921,11 +920,6 @@ void ScriptWidget::addButton() {
       sl->insertItem(se->text());
       break;
 
-    case ScriptEdit::Mode:
-      stl->insertItem("Mode");
-      sl->insertItem(se->text());
-      break;
-
     default:
       break;
   }
@@ -1019,11 +1013,6 @@ void ScriptWidget::insertButton() {
 
     case ScriptEdit::Save:
       stl->insertItem("Save", stl->currentItem());
-      sl->insertItem(se->text(), sl->currentItem());
-      break;
-
-    case ScriptEdit::Mode:
-      stl->insertItem("Mode", stl->currentItem());
       sl->insertItem(se->text(), sl->currentItem());
       break;
 
