@@ -59,7 +59,6 @@ public:
   void notify(const QObject *, const char *);
   void stop();
   void flush();
-  void setReadMask(unsigned char);
 
   int     lockdevice();
   void    unlockdevice();
@@ -86,7 +85,6 @@ private:
   QString errmsg;
   struct termios initial_tty;
   struct termios tty;
-  unsigned char dataMask;
   bool modem_is_locked;
 };
 
