@@ -70,8 +70,7 @@ public:
 		 LoopStart = 10,
 		 LoopEnd = 11, 
 		 Scan = 12,
-                 Save = 13,
-		 Mode = 14 };
+                 Save = 13 };
 };
 
 #endif
