@@ -1,3 +1,10 @@
+Aug 07 1999:
+	* fixed a prominent cause of "PPP timeout expired" (see ChangeLog)
+	* kppplogview should compile on all platforms supported by KDE now.
+	* removed the option to switch between 7 and 8 data bits in favor of
+	  using 7 bits only all the time (like `chat' does). A *real* data and
+          parity bit support has to wait until KDE 2.0.
+
 Jul 13 1999:
 	* `Mode {7bit|8bit}' script command for CompuServe's 7E1 mode
 	* speed up in reading from the modem
